<resources>
    <string name="app_name">Relojcs</string>
    <string name="edit_message">Edit Message</string>
    <string name="button_send">Send</string>
    <string name="text_hour_base">12:00</string>
    <string name="text_hour_la">11:00</string>
    <string name="text_hour_ny">14:00</string>
    <string name="text_hour_md">20:00</string>
    <string name="text_city_example">April 1, San Salvador</string>
    <string name="activity_main_title">Titulo 1</string>
    <string name="text_city_los_angeles">Los Angeles</string>
    <string name="powered_by_carmens">By Carmen Solano</string>
    <string name="text_city_new_york">New York</string>
    <string name="text_city_madrid">Madrid</string>
</resources>
